MIR-4776 fix quiz alignment ie8
Conflicts:
	skins/css/style.less
(the imported less styles aren't in this branch yet)

--- a/skins/mirror/css/enhanced.css
+++ b/skins/mirror/css/enhanced.css
@@ -538,3 +538,11 @@ header .search-box input[type="text"]::-webkit-input-placeholder {
 .ie7 li.answer-option h4,li.answer-disabled h4 {
   width: 148px; 
 }
+
+.ie8 li.answer-option h4 {
+  width: 50px;
+}
+
+.ie8 .quiz .figcaption-noimg {
+  width: 531px;
+}
